# model

./: Report_lab1_iv222_Rudtckikh_model.docx
lab1/: Report_lab1_iv222_Rudtckikh_model_final.docx  a.out  main.cpp  plot.gp  plot_data  plot_scatter.gp
lab2/: a.out  final  final.cpp  finalfinal.cpp  finalfinalcom.cpp  fixedall.cpp  form.cpp  main  main.cpp  test  test.cpp  test11  test_graph.txt
lab3/: CMakeLists.txt  a.out  main.cpp  visual.cpp
lab3/graphviz_output/: Exp_a0_001_b3_0_maxDist30_graph.dot  Exp_a0_001_b3_0_maxDist30_tree.dot  Exp_a0_01_b2_0_maxDeg10_graph.dot  Exp_a0_01_b2_0_maxDeg10_tree.dot  Exp_a0_05_b1_5_maxDist50_graph.dot  Exp_a0_05_b1_5_maxDist50_tree.dot  Exp_a0_1_b0_5_maxDeg15_maxDist80_graph.dot  Exp_a0_1_b0_5_maxDeg15_maxDist80_tree.dot  Exp_a0_1_b1_0_graph.dot  Exp_a0_1_b1_0_tree.dot  Inv_b0_5_maxDeg12_maxDist70_graph.dot  Inv_b1_0_graph.dot  Inv_b1_0_tree.dot  Inv_b1_5_maxDist60_graph.dot  Inv_b1_5_maxDist60_tree.dot  Inv_b2_0_maxDeg8_graph.dot  Inv_b2_0_maxDeg8_tree.dot
lab4/: Report_lab4_iv222_Rudtckikh_model.docx  a.out  final.cpp  main.cpp  test.cpp
